syntax = "proto3";

option csharp_namespace = "MCIO.Demos.Store.Ports.AdminMobileBFF";

package MCIO.Demos.Store.Ports.AdminMobileBFF;

service PingService {
  rpc Ping(PingRequest) returns (PingReply);
}

message PingRequest {

}

message PingReply {

}
